feat: Implementierte die Generierung von Stressdaten für den V8-Simulator, passte die Geschlechts- und MmB-Logik in Formeln an und änderte die PDF-Exportausrichtung auf Hochformat.

--- a/src/ExportDialog.html
+++ b/src/ExportDialog.html
@@ -103,7 +103,7 @@
                             <div class="flex flex-col truncate">
                                 <span
                                     class="text-slate-900 dark:text-white text-sm font-medium truncate">Archiv-PDFs</span>
-                                <span class="text-slate-500 dark:text-slate-400 text-xs truncate">Querformat, A4</span>
+                                <span class="text-slate-500 dark:text-slate-400 text-xs truncate">Hochformat, A4</span>
                             </div>
                         </div>
                         <span class="material-symbols-outlined text-gray-300 text-[20px] shrink-0 mx-2"
